<resources>
    <string name="app_name">安卓视图列表合集</string>
    <string name="android_view_collection">安卓视图列表合集</string>
    <string name="text_view">Text View</string>
    <string name="button">Button</string>
    <string name="edit_text">Edit Text</string>
    <string name="image_view">Image View</string>
    <string name="check_box">Check Box</string>
    <string name="radio_button">Radio Button</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="recycler_view">Recycler View</string>
    <string name="view_pager">View Pager</string>
    <string name="seek_bar">Seek Bar</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="web_view">Web View</string>
    <string name="surface_view">surface view\n</string>
    <string name="scroll_view">scroll view</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>